# docs/swagger.json
@@ -15,12 +15,17 @@
         },
         "version": "0.1"
     },
-    "host": "129.211.48.125:8088",
+    "host": "127.0.0.1:8088",
     "basePath": "/admin",
     "paths": {
         "/login": {
             "post": {
-                "description": "后台管理登录接口",
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "后台登出接口",
                 "consumes": [
                     "application/json"
                 ],
@@ -28,9 +33,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "授权相关接口"
+                    "授权"
                 ],
-                "summary": "登录接口",
+                "summary": "登出接口",
                 "parameters": [
                     {
                         "type": "string",
@@ -44,6 +49,13 @@
                         "description": "密码必传",
                         "name": "password",
                         "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
                         "required": true
                     }
                 ],
@@ -73,7 +85,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "授权相关接口"
+                    "授权"
                 ],
                 "summary": "注册接口",
                 "parameters": [
@@ -100,13 +112,20 @@
                         }
                     },
                     "400": {
-                        "description": "{\"msg\": \"错误信息\",\"code\":2001}",
+                        "description": "{\"msg\": \"无效的参数\",\"code\":2001}",
                         "schema": {
                             "type": "string"
                         }
                     }
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
